--- a/index.html
+++ b/index.html
@@ -21,3 +21,18 @@
     <li><a href="#Constants" class="nav-link">Constants</a></li>
   </ul>
   </nav>
+	<div class="declaration">This document has been built by me, Priyanshu Acharya.<br>
+However, the content in the right side has been copied from the freeCodeCamp Certification Program example.</div>
+  </div>
+  <div class="content">
+  <main id="main-doc">
+    <section class="main-section" id="Introduction">
+      <header>Introduction</header>
+      <article>
+        <p> JavaScript is a cross-platform, object-oriented scripting language.
+            It is a small and lightweight language. Inside a host environment
+            (for example, a web browser), JavaScript can be connected to the
+            objects of its environment to provide programmatic control over
+            them.</p>
+      </article>
+    </section>
