--- a/index.html
+++ b/index.html
@@ -36,3 +36,31 @@ However, the content in the right side has been copied from the freeCodeCamp Cer
             them.</p>
       </article>
     </section>
+    <section class="main-section" id="What_you_should_know">
+      <header>What you should know</header>
+      <article>
+        <p>This guide assumes you have the following basic background:</p>
+        <ul>
+            <li>
+              A general understanding of the Internet and the World Wide Web
+              (WWW).
+            </li>
+            <li>Good working knowledge of HyperText Markup Language (HTML).</li>
+            <li>
+              Some programming experience. If you are new to programming, try
+              one of the tutorials linked on the main page about JavaScript.
+            </li>
+          </ul>
+      </article>
+    </section>
+    <section class="main-section" id="Javascript_and_Java">
+      <header>Javascript and Java</header>
+      <article>
+        <p>JavaScript and Java are similar in some ways but fundamentally
+            different in some others. The JavaScript language resembles Java but
+            does not have Java's static typing and strong type checking.
+            JavaScript follows most Java expression syntax, naming conventions
+            and basic control-flow constructs which was the reason why it was
+            renamed from LiveScript to JavaScript.</p>
+      </article>
+    </section>
