--- a/index.html
+++ b/index.html
@@ -64,3 +64,26 @@ However, the content in the right side has been copied from the freeCodeCamp Cer
             renamed from LiveScript to JavaScript.</p>
       </article>
     </section>
+    <section class="main-section" id="Hello_World">
+      <header>Hello World</header>
+      <article>
+        <p>To get started with writing JavaScript, open the Scratchpad and write
+          your first "Hello world" JavaScript code:</p>
+          <code
+            >function greetMe(yourName) { alert("Hello " + yourName); }
+            greetMe("World");
+          </code>
+      </article>
+    </section>
+    <section class="main-section" id="Variables">
+      <header>Variables</header>
+      <article>
+        <p>You use variables as symbolic names for values in your application.
+          The names of variables, called identifiers, conform to certain rules.
+          A JavaScript identifier must start with a letter, underscore (_), or
+          dollar sign ($); subsequent characters can also be digits (0-9).
+          Because JavaScript is case sensitive, letters include the characters
+          "A" through "Z" (uppercase) and the characters "a" through "z"
+          (lowercase).</p>
+      </article>
+    </section>
