--- a/index.html
+++ b/index.html
@@ -87,3 +87,25 @@ However, the content in the right side has been copied from the freeCodeCamp Cer
           (lowercase).</p>
       </article>
     </section>
+    <section class="main-section" id="Declaring_Variables">
+      <header>Declaring Variables</header>
+      <article>
+        <p>You can declare a variable in three ways:</p>
+        <ul>
+          <li><p>
+            With the keyword var. For example, <code>var x = 42.</code> This
+            syntax can be used to declare both local and global variables.
+          </p></li>
+          <li><p>
+            By simply assigning it a value. For example,
+            <code>x = 42.</code> This always declares a global variable. It
+            generates a strict JavaScript warning. You shouldn't use this
+            variant.
+          </p></li>
+          <li><p>
+            With the keyword let. For example,<code> let y = 13.</code> This
+            syntax can be used to declare a block scope local variable. See
+            Variable scope below.
+          </p></li>
+      </article>
+    </section>
